--- a/src/style.css
+++ b/src/style.css
@@ -97,3 +97,17 @@ button:focus-visible {
 .el-table .el-table__cell {
   padding: 12px 0 !important;
 }
+.el-divider--horizontal {
+  margin: 10px 0 !important;
+}
+
+.ellipsisRow-2 {
+  white-space: pre-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  padding: 0px !important;
+}
+
